[gd_scene load_steps=9 format=3 uid="uid://cn6qrbc5gxv72"]

[ext_resource type="Script" path="res://Assets/Scripts/Menu/PauseMenu.gd" id="1_xsman"]
[ext_resource type="Texture2D" uid="uid://btfr8oxdeg1mx" path="res://Assets/Art/UI/CloseButton_Normal.png" id="2_l5uhc"]
[ext_resource type="Texture2D" uid="uid://bgdlb1126254u" path="res://Assets/Art/UI/CloseButton_Pressed.png" id="3_pyohm"]
[ext_resource type="Texture2D" uid="uid://b28gcdo1jcxxs" path="res://Assets/Art/UI/CloseButton_Hover.png" id="4_x2okc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rteyl"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.54902, 0.54902, 0.54902, 1)
border_color = Color(0.54902, 0.54902, 0.54902, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l77g5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qk07t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d0wt2"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xsman")

[node name="GrayOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.568627)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -170.0
offset_right = 200.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 170)
theme_override_styles/panel = SubResource("StyleBoxFlat_rteyl")

[node name="HeaderLabel" type="RichTextLabel" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Paused[/center]"
fit_content = true

[node name="CloseButtonScaleEnabler" type="Control" parent="PanelContainer"]
custom_minimum_size = Vector2(52.972, 60.724)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="CloseButton" type="TextureButton" parent="PanelContainer/CloseButtonScaleEnabler"]
layout_mode = 2
offset_left = 0.705
offset_top = -3.85
offset_right = 82.705
offset_bottom = 90.15
scale = Vector2(0.646, 0.646)
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("2_l5uhc")
texture_pressed = ExtResource("3_pyohm")
texture_hover = ExtResource("4_x2okc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Buffer" type="Control" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_l77g5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qk07t")
theme_override_styles/normal = SubResource("StyleBoxEmpty_d0wt2")
text = "Resume"

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_l77g5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qk07t")
theme_override_styles/normal = SubResource("StyleBoxEmpty_d0wt2")
text = "Settings
"

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_l77g5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qk07t")
theme_override_styles/normal = SubResource("StyleBoxEmpty_d0wt2")
text = "Main Menu
"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_l77g5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qk07t")
theme_override_styles/normal = SubResource("StyleBoxEmpty_d0wt2")
text = "Quit"
